update Open Sans Google font url

--- a/src/scss/partials/_settings.scss
+++ b/src/scss/partials/_settings.scss
@@ -20,7 +20,7 @@ $breakpoints: (
 
 // Font Imports
 $font-imports: (
-    'https://fonts.googleapis.com/css?family=Open+Sans'
+    'https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap'
 );
 
 // Local Fonts
