add font-display swap to the local fonts

--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -26,6 +26,7 @@ $font-map in $local-fonts {
                 url('#{$font-root}#{map-get($font, font)}.otf') format('opentype');
             font-weight: map-get($font, weight);
             font-style: map-get($font, style);
+            font-display: swap;
         }
     }
 }
